--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
     </com.google.android.material.bottomappbar.BottomAppBar>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/ismoke_btn"
         android:theme="@style/Theme.MaterialComponents.Light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
