--- a/app/src/main/res/layout/fragment_ismoke_one.xml
+++ b/app/src/main/res/layout/fragment_ismoke_one.xml
@@ -3,27 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/accent_white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.ismoke.screen.IsmokeOneFragment">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/ismoke_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/normal_green"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:fontFamily="@font/poppins_semibold"
-            android:text="@string/back"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-    </androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:id="@+id/tv_ismoke_title"
@@ -38,7 +20,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ismoke_toolbar"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/tv_ismoke_description"
@@ -96,6 +78,7 @@
             android:inputType="time"
             android:textSize="14sp"
             tools:ignore="SpeakableTextPresentCheck" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -179,7 +162,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_regular"
             android:hint="@string/helper_edt"
-            android:inputType="number"
+            android:inputType="text"
             android:textSize="14sp"
             tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
