--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -127,6 +127,7 @@
                 android:scaleType="fitCenter" />
 
             <ImageView
+                android:id="@+id/ic_lung"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
