feat and fix: integrating api new password, forgot password, and otp verification. fix asynchronous process

--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -15,15 +15,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="36dp"
+            android:fontFamily="@font/poppins_semibold"
             android:text="@string/back"
             android:textColor="@color/white"
-            android:textSize="24sp"
-            android:fontFamily="@font/poppins_semibold"/>
+            android:textSize="24sp" />
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -56,6 +56,31 @@
             android:textSize="14sp" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/otp_edit_text_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:hint="OTP Code"
+            app:boxBackgroundMode="outline"
+            app:boxCornerRadiusBottomEnd="16dp"
+            app:boxCornerRadiusBottomStart="16dp"
+            app:boxCornerRadiusTopEnd="16dp"
+            app:boxCornerRadiusTopStart="16dp"
+            app:errorIconDrawable="@null"
+            app:startIconTint="@color/neutral_50">
+
+            <com.cpp.unsmoke.utils.customview.EditText
+                android:id="@+id/edt_otp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="text"
+                android:paddingStart="0dp"
+                android:paddingEnd="48dp"
+                tools:ignore="SpeakableTextPresentCheck" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/new_password_edit_text_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,9 +91,9 @@
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
             app:endIconMode="password_toggle"
-            app:startIconTint="@color/neutral_50"
             app:errorIconDrawable="@null"
-            app:startIconDrawable="@drawable/fi_rr_lock">
+            app:startIconDrawable="@drawable/fi_rr_lock"
+            app:startIconTint="@color/neutral_50">
 
             <com.cpp.unsmoke.utils.customview.EditText
                 android:id="@+id/edt_new_password"
@@ -92,9 +117,9 @@
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
             app:endIconMode="password_toggle"
-            app:startIconTint="@color/neutral_50"
             app:errorIconDrawable="@null"
-            app:startIconDrawable="@drawable/fi_rr_lock">
+            app:startIconDrawable="@drawable/fi_rr_lock"
+            app:startIconTint="@color/neutral_50">
 
             <com.cpp.unsmoke.utils.customview.EditText
                 android:id="@+id/edt_confirm_new_password"
@@ -119,6 +144,16 @@
             android:textSize="16sp" />
     </LinearLayout>
 
-
+    <ProgressBar
+        android:id="@+id/new_password_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
