--- a/app/src/main/res/layout/milestone_item_row.xml
+++ b/app/src/main/res/layout/milestone_item_row.xml
@@ -17,8 +17,10 @@
 
         <ImageView
             android:id="@+id/iv_badges"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/sample_badges" />
