--- a/app/src/main/res/layout/rank_item_row.xml
+++ b/app/src/main/res/layout/rank_item_row.xml
@@ -48,12 +48,15 @@
         <TextView
             android:id="@+id/tv_username"
             style="@style/TextContent.DescriptionMedium"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="Username"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tv_user_xp"
             app:layout_constraintStart_toEndOf="@id/photo_holder"
             app:layout_constraintTop_toTopOf="parent" />
 
